# rpi_lcars

./: pyproject.toml
app/ui/utils/: gif_image.py
